# Spectrogrammer

./: .gitignore  .gitmodules  Makefile  README.md  build.gradle  build.sh  cross-compile-kissfft.sh  my-release-key.keystore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BufferAverage.h  BufferIO.h  CMakeLists.txt  CMakeLists.txt_  ChunkerProcessor.cpp  ChunkerProcessor.h  CrossCorrelation.h  CumulativeMovingAverage.h  Goertzel.h  Processor.cpp  Processor.h  ScaleBuffer.h  ScaleBufferBase.h  auformat.cpp  auformat.h  colormaps.cpp  colormaps.h  fft.h  jni_interface.h  multithreadedUpdates.cpp  plasma.cpp  scale.cpp  scale.h  scalebuffer.h  waterfall.cpp  waterfall.h
app/src/main/cpp/audio/: audio_common.cpp  audio_common.h  audio_main.cpp  audio_recorder.cpp
app/src/main/java/com/example/plasma/: Audio.java  ConfigDialog.java  MainActivity.java  MainApp.java  Plasma.java  SeekBarHelper.java  Spectrogram.java  Viewport.java  WaterfallApp.java  WaterfallView.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/app/: BufferAverage.h  BufferIO.h  Processor.h  ScaleBufferBase.h  ScaleBufferX.h  ScaleBufferY.h  Spectrogrammer.cpp  Spectrogrammer.h  auformat.cpp  colormaps.cpp  fft.h  imgui_helpers.cpp  imgui_helpers.h  main.cpp  scale.cpp  scale.h  utils.cpp  waterfall.cpp  waterfall.h
app/src/main/jni/audio/: CMakeLists.txt  audio_main.cpp  audio_recorder.h  debug_utils.cpp
app/src/main/res/drawable/: background_shadow.xml  measure_checker.xml  play_pause_checker.xml
app/src/main/res/layout/: action_layout_styled_checkbox.xml  activity_main.xml  layout.xml  settings_menu.xml  spinner_item.xml
app/src/main/res/menu/: options_menu.xml  toolbar_options_menu.xml
app/src/main/res/values/: dimen.xml  strings.xml  styles.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 100.txt
gradle/wrapper/: gradle-wrapper.properties
src/: AndroidManifest.xml  AndroidManifest.xml.template  gdb-setup  gdb-setup.template  main_android.c  main_android.cpp  main_linux.c  main_linux.cpp
src/app/: BufferIO.h  ChunkerProcessor.cpp  ChunkerProcessor.h  FilePicker.cpp  FilePicker.h  HoldPicker.cpp  HoldPicker.h  ModalHoldPicker.cpp  ModalHoldPicker.h  ModalSampleRate.cpp  ModalSampleRate.h  Processor.cpp  Processor.h  ScaleBufferBase.h  ScaleBufferX.h  ScaleBufferY.cpp  ScaleBufferY.h  ScaleUI.cpp  ScaleUI.h  Spectrogrammer.cpp  Spectrogrammer.h  SpectrumFile.cpp  SpectrumFile.h  auformat.h  colormaps.cpp  colormaps.h  fft.cpp  fft.h  imgui_helpers.cpp  pass_through.h  scale.cpp  scale.h  test.py  utils.cpp  waterfall.cpp  waterfall.h
src/audio/: alsa_driver.cpp  audio_common.h  audio_main.cpp  audio_main.h  audio_recorder.cpp  buf_manager.h
src/res/values/: strings.xml
submodules/rawdraw/: CNFGXDriver.c  rawdraw_sf.h
